--- a/app/src/main/res/layout/item_favorite.xml
+++ b/app/src/main/res/layout/item_favorite.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="12dp"
-
+    android:layout_marginLeft="8dp"
+    android:layout_marginRight="8dp"
     >
 
     <LinearLayout
