--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -6,6 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="12dp"
+    android:layout_marginRight="8dp"
+    android:layout_marginLeft="8dp"
     >
 
     <LinearLayout
@@ -24,41 +26,42 @@
             />
 
         <LinearLayout
-            android:layout_marginBottom="12dp"
-            android:paddingLeft="12dp"
-            android:orientation="horizontal"
+            android:weightSum="10"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="12dp"
+            android:orientation="horizontal"
+            android:paddingLeft="12dp">
 
             <LinearLayout
+                android:layout_weight="8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
-                android:orientation="vertical"
-                android:layout_width="260dp"
-                android:layout_height="wrap_content">
+                android:orientation="vertical">
 
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-                <TextView
-                    android:textColor="@color/colorBlack"
-                    android:layout_marginLeft="4dp"
-                    android:textSize="18sp"
-                    android:textAllCaps="true"
-                    android:id="@+id/item_order_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="name"/>
+                    <TextView
+                        android:id="@+id/item_order_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="4dp"
+                        android:text="name"
+                        android:textAllCaps="true"
+                        android:textColor="@color/colorBlack"
+                        android:textSize="18sp" />
 
                     <TextView
                         android:id="@+id/item_order_quantity"
-                        android:textColor="@color/colorBlack"
-                        android:textSize="20sp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="-1"
-                        />
+                        android:textColor="@color/colorBlack"
+                        android:textSize="20sp" />
 
 
                 </LinearLayout>
@@ -68,34 +71,33 @@
                     android:layout_height="wrap_content">
 
                     <ImageView
-                        android:layout_marginTop="2dp"
                         android:layout_width="wrap_content"
                         android:layout_height="22dp"
-                        android:src="@drawable/ic_attach_money_black_24dp"/>
+                        android:layout_marginTop="2dp"
+                        android:src="@drawable/ic_attach_money_black_24dp" />
 
                     <TextView
-                        android:textColor="@color/colorBlack"
-                        android:textSize="18sp"
-                        android:textStyle="italic"
                         android:id="@+id/item_order_price"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="giá"/>
+                        android:text="giá"
+                        android:textColor="@color/colorBlack"
+                        android:textSize="18sp"
+                        android:textStyle="italic" />
                 </LinearLayout>
 
 
-
-
             </LinearLayout>
+
             <TextView
+                android:layout_weight="2"
                 android:id="@+id/item_order_status"
-                android:textSize="15sp"
-                android:layout_gravity="center"
-                android:textColor="@color/colorBlack"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:text="status"
-                />
+                android:textColor="@color/colorBlack"
+                android:textSize="15sp" />
 
 
         </LinearLayout>
