--- a/app/src/main/res/layout/layout_view_food.xml
+++ b/app/src/main/res/layout/layout_view_food.xml
@@ -7,21 +7,23 @@
     android:layout_height="match_parent"
     android:background="@color/colorWhite"
     android:orientation="vertical"
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp"
+    android:paddingLeft="5dp"
+    android:paddingRight="5dp"
     android:paddingBottom="10dp"
+    android:id="@+id/view_food"
     >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <ImageView
-            android:layout_marginTop="17dp"
+            android:layout_marginTop="21dp"
+            android:layout_marginLeft="5dp"
             android:id="@+id/btnback"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:src="@drawable/ic_keyboard_backspace_black_24dp"
-            android:tint="@color/colorBlue"/>
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/back"
+            android:tint="@color/colorPrimary"/>
 
 
         <TextView
@@ -35,15 +37,15 @@
             android:layout_centerHorizontal="true"
             android:textSize="30sp"
             android:textStyle="bold"
-            android:textColor="@color/colorBlue"
+            android:textColor="@color/colorPrimary"
             android:fontFamily="@font/nabila"
             />
     </LinearLayout>
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:layout_marginTop="@dimen/size10dp"
         android:layout_below="@+id/tvtenQuanLayoutXemDSMon"
-        android:id="@+id/listviewFood"
+        android:id="@+id/recycler_view_food"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
