--- a/app/src/main/res/layout/app_bar_customer.xml
+++ b/app/src/main/res/layout/app_bar_customer.xml
@@ -20,7 +20,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_khachhang" />
+    <include layout="@layout/content_customer" />
 
     <com.andremion.counterfab.CounterFab
         android:id="@+id/fab"
