--- a/app/src/main/res/layout/item_view_food.xml
+++ b/app/src/main/res/layout/item_view_food.xml
@@ -9,6 +9,7 @@
     android:layout_marginBottom="10dp"
     android:layout_marginLeft="3dp"
     android:layout_marginRight="3dp"
+    app:cardElevation="8dp"
     android:id="@+id/cardView_food"
     >
 
