--- a/app/src/main/res/layout/activity_customer.xml
+++ b/app/src/main/res/layout/activity_customer.xml
@@ -9,7 +9,7 @@
     tools:openDrawer="start">
 
     <include
-        layout="@layout/app_bar_khachhang"
+        layout="@layout/app_bar_customer"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
@@ -22,7 +22,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:headerLayout="@layout/nav_header_khachhang"
-        app:menu="@menu/activity_khachhang_drawer" />
+        app:headerLayout="@layout/nav_header_customer"
+        app:menu="@menu/activity_customer_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
