--- a/app/src/main/res/layout/item_favorite.xml
+++ b/app/src/main/res/layout/item_favorite.xml
@@ -8,6 +8,7 @@
     android:layout_marginBottom="12dp"
     android:layout_marginLeft="8dp"
     android:layout_marginRight="8dp"
+    app:cardElevation="8dp"
     >
 
     <LinearLayout
