--- a/app/src/main/res/layout/layout_info_person.xml
+++ b/app/src/main/res/layout/layout_info_person.xml
@@ -81,7 +81,8 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:cardElevation="8dp">
 
         <LinearLayout
             android:padding="15dp"
