--- a/app/src/main/res/layout/layout_info_person.xml
+++ b/app/src/main/res/layout/layout_info_person.xml
@@ -1,145 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorWhite"
+    android:background="#FFFFFF"
     android:orientation="vertical">
 
     <LinearLayout
-        android:weightSum="10"
-        android:id="@+id/khung"
+        android:background="#11DCFA"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_centerVertical="false"
-        android:background="@color/colorPrimary"
-        android:orientation="horizontal"
-        android:paddingTop="5dp">
-
-
-        <ImageView
-            android:id="@+id/ivhome"
-            android:padding="10dp"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_keyboard_backspace_black_24dp"
-            android:tint="@color/colorWhite"/>
-
-        <TextView
-            android:layout_marginRight="44dp"
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Xin chào quý khách"
-            android:textSize="20sp"
-            android:textColor="@color/colorWhite"/>
-
-
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_marginLeft="10dp"
-        android:layout_below="@+id/khung"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@drawable/user2"/>
-        <TextView
-            android:layout_marginTop="3dp"
-            android:layout_marginLeft="@dimen/size10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Thông tin khách hàng"
-            android:textColor="#FF9100"
-            android:textSize="18sp"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:textColor="#FF9100"
-            android:paddingLeft="10dp"
-            android:background="@color/colorGray"
-            android:layout_marginTop="35dp"/>
-    </LinearLayout>
-
-    <android.support.v7.widget.CardView
-        android:layout_marginTop="100dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardElevation="8dp">
-
+        android:layout_height="260dp"
+        android:orientation="vertical">
         <LinearLayout
-            android:padding="15dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <TextView
-                android:id="@+id/tvtenKhachHang"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="Họ tên"
-                android:textColor="@color/colorBlack"/>
-            <TextView
-                android:layout_marginTop="5dp"
-                android:id="@+id/tvtentaikhoan"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="ten tk"
-                android:textColor="@color/colorBlack"/>
-            <TextView
-                android:layout_marginTop="5dp"
-                android:id="@+id/tvdiachikhachhang"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="dia chi"
-                android:textColor="@color/colorBlack"/>
-            <TextView
-                android:layout_marginTop="5dp"
-                android:id="@+id/tvsdtkhachhang"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="sdt"
-                android:textColor="@color/colorBlack"/>
+            android:layout_marginLeft="24dp"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/image_person"
+                android:layout_marginTop="45dp"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:src="@drawable/ic_person_black_24dp"
+                android:tint="@color/colorWhite"
+                app:civ_border_color="@color/colorWhite"
+                app:civ_border_width="2dp"/>
+            <ImageView
+                android:id="@+id/change_image_person"
+                android:layout_marginTop="85dp"
+                android:padding="10dp"
+                android:layout_gravity="center_vertical"
+                android:tint="@color/colorWhite"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:src="@drawable/ic_create_new_folder_black_24dp"/>
         </LinearLayout>
 
-    </android.support.v7.widget.CardView>
+        <TextView
+            android:id="@+id/tvtenKhachHang"
+            android:gravity="center"
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorWhite"
+            android:textStyle="bold"
+            android:textSize="24sp"
+            android:text="pham tan dai"/>
+    </LinearLayout>
 
 
+    <LinearLayout
+        android:layout_width="360dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="center"
+        android:layout_marginTop="45dp">
+        <LinearLayout
+            android:orientation="horizontal"
+            android:paddingLeft="25dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:tint="#11DCFA"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:src="@drawable/ic_email_black_24dp"/>
+            <TextView
+                android:id="@+id/tvtentaikhoan"
+                android:textStyle="bold"
+                android:layout_gravity="center_vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="20dp"
+                android:textSize="16sp"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_marginTop="25dp"
+            android:orientation="horizontal"
+            android:paddingLeft="25dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:tint="#11DCFA"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:src="@drawable/ic_phone_android_black_24dp"/>
+            <TextView
+                android:id="@+id/tvsdtkhachhang"
+                android:textStyle="bold"
+                android:layout_gravity="center_vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="20dp"
+                android:text=""
+                android:textSize="16sp"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_marginTop="25dp"
+            android:orientation="horizontal"
+            android:paddingLeft="25dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:tint="#11DCFA"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:src="@drawable/ic_location_on_black_24dp"/>
+            <TextView
+                android:id="@+id/tvdiachikhachhang"
+                android:textStyle="bold"
+                android:layout_gravity="center_vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="20dp"
+                android:text=""
+                android:textSize="16sp"/>
+        </LinearLayout>
+
+    </LinearLayout>
 
     <Button
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="400dp"
         android:id="@+id/btnUpdateInfo"
+        android:textColor="@color/colorWhite"
+        android:background="@drawable/duongvien_xanh"
+        android:layout_marginTop="60dp"
+        android:layout_gravity="center_horizontal"
         android:layout_width="200dp"
-        android:layout_height="40dp"
-        android:background="#17881B"
+        android:layout_height="wrap_content"
         android:text="Cập nhật thông tin"
         android:textAllCaps="false"
-        android:textColor="@color/colorWhite"
-        android:textSize="16sp" />
+        android:textSize="16sp"/>
 
-
-
-
-</RelativeLayout>
-
+</LinearLayout>
