--- a/app/src/main/res/layout/layout_admin.xml
+++ b/app/src/main/res/layout/layout_admin.xml
@@ -28,11 +28,25 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="150dp"
         android:orientation="vertical"
         android:padding="20dp">
 
         <Button
+            android:layout_gravity="center"
+            android:textColor="@color/colorWhite"
+            android:id="@+id/btnViewListUser"
+            android:layout_width="match_parent"
+            android:layout_height="65dp"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/duongvien_xanh"
+            android:text="Xem danh sách tài khoản"
+            android:textSize="20sp"
+            android:textAllCaps="false"/>
+
+
+        <Button
+            android:layout_marginTop="30dp"
             android:layout_gravity="center"
             android:textColor="@color/colorWhite"
             android:id="@+id/btnThemQuanKhungAdmin"
@@ -51,7 +65,7 @@
             android:layout_height="65dp"
             android:layout_marginTop="30dp"
             android:background="@drawable/duongvien_xanh"
-            android:text="Xóa tài khoản quán ăn"
+            android:text="Xóa tài khoản Quán ăn"
             android:textSize="20sp"
             android:textAllCaps="false"/>
 
