--- a/app/src/main/res/layout/layout_forgot_pass.xml
+++ b/app/src/main/res/layout/layout_forgot_pass.xml
@@ -28,7 +28,7 @@
 
     <com.rengwuxian.materialedittext.MaterialEditText
         android:id="@+id/EmailForgotPass"
-        android:drawableLeft="@drawable/mail1"
+        android:drawableLeft="@drawable/ic_email_black_36dp"
         android:drawablePadding="@dimen/size10dp"
         android:inputType="textEmailAddress"
         android:layout_width="match_parent"
