--- a/app/src/main/res/layout/layout_remove_restaurant.xml
+++ b/app/src/main/res/layout/layout_remove_restaurant.xml
@@ -39,7 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_margin="@dimen/size15dp"
-            android:drawableLeft="@drawable/mail1"
+            android:drawableLeft="@drawable/ic_email_black_36dp"
             android:drawablePadding="@dimen/size10dp"
             android:hint="Email cần xóa"
             android:inputType="textEmailAddress"
